dnl $OpenBSD: configure.in,v 1.4 2000/10/03 01:33:56 angelos Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(assertion.h)

dnl Defs file
AC_CONFIG_HEADER(config.h:config.hin)

dnl Checks for programs.
AC_PROG_LEX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_YACC
AC_PATH_PROGS(SSLEAY, openssl ssleay, /usr/local/bin/ssleay, \
               $PATH:/usr/local/bin:/usr/local/ssl/sbin:/usr/local/ssl/bin:/usr/ssl/bin:/usr/ssl/sbin:/usr/sbin:/usr/openssl/bin:/usr/openssl/bin:/usr/local/openssl/bin:/usr/local/openssl/sbin)
AC_PATH_PROG(RM, rm, /bin/rm)
AC_PATH_PROG(AR, ar, /usr/bin/ar)
AC_PATH_PROG(NROFF, nroff, /usr/bin/nroff)
AC_PATH_PROG(TAR, tar, /bin/tar)
AC_PATH_PROG(TRUE, true, /usr/bin/true)
AC_PATH_PROG(MKDIR, mkdir, /bin/mkdir)
AC_PATH_PROG(TR, tr, /usr/bin/tr)
AC_PATH_PROG(ECHO, echo, /bin/echo)
AC_PATH_PROG(SED, sed, /usr/bin/sed)

dnl Checks for libraries.
LIBS="-L/usr/lib -L/usr/local/lib -L/usr/ssl/lib -L/usr/openssl/lib\
 -L/usr/local/ssl/lib -L/usr/local/openssl/lib -L/usr/pkg/lib -L/pkg/lib"

AC_CHECK_LIB(m, floor, LIBS="$LIBS -lm")
AC_CHECK_LIB(rsaref, RSAPrivateDecrypt, LIBS="$LIBS -lrsaref")
AC_CHECK_LIB(crypto, i2a_ASN1_STRING, LIBS="$LIBS -lcrypto")
AC_CHECK_LIB(RSAglue, RSA_ref_private_encrypt, LIBS="$LIBS -lRSAglue")
AC_CHECK_LIB(pgp, pgpCipherByName, LIBS="$LIBS -lpgp")

dnl Checks for header files.
CPPFLAGS="-I/usr/include -I/usr/local/include -I/usr/ssl/include\
 -I/usr/local/ssl/include -I/usr/openssl/include -I/usr/pkg/include\
 -I/usr/local/openssl/include -I/pkg/include"

AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(limits.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(regex.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(io.h)
AC_CHECK_HEADERS(ssl/crypto.h)
AC_CHECK_HEADERS(openssl/crypto.h)
AC_CHECK_HEADERS(crypto.h)
AC_CHECK_HEADERS(memory.h)
AC_CHECK_HEADERS(pgplib.h)

dnl Checks for other files

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(regcomp open close read _open _close _read strchr memcpy)
AC_CHECK_FUNCS(strcasecmp strncasecmp stricmp strnicmp snprintf __b64_ntop)
AC_REPLACE_FUNCS(getopt)

AC_OUTPUT(Makefile)
